# pqcrypto

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Pipfile  README.md  SECURITY.md  WASM.md  generate-implementations.py  implementations.yaml  release.sh
.github/workflows/: ci.yml
pqcrypto/: Cargo.toml  README.md
pqcrypto-build/: Cargo.toml
pqcrypto-build/src/: lib.rs
pqcrypto-classicmceliece/: Cargo.toml  README.md  build.rs
pqcrypto-classicmceliece/src/: ffi.rs  lib.rs  mceliece348864.rs  mceliece348864f.rs  mceliece460896.rs  mceliece460896f.rs  mceliece6688128.rs  mceliece6688128f.rs  mceliece6960119.rs  mceliece6960119f.rs  mceliece8192128.rs  mceliece8192128f.rs
pqcrypto-dilithium/: Cargo.toml  README.md  build.rs
pqcrypto-dilithium/src/: dilithium2.rs  dilithium2aes.rs  dilithium3.rs  dilithium3aes.rs  dilithium4.rs  dilithium5.rs  dilithium5aes.rs  ffi.rs  lib.rs
pqcrypto-falcon/: Cargo.toml  README.md  build.rs
pqcrypto-falcon/src/: falcon1024.rs  falcon512.rs  falconpadded1024.rs  falconpadded512.rs  ffi.rs  lib.rs
pqcrypto-frodo/: Cargo.toml  README.md  build.rs  pqclean  pqclean-wasi
pqcrypto-frodo/src/: ffi.rs  frodokem1344aes.rs  frodokem1344shake.rs  frodokem640aes.rs  frodokem640shake.rs  frodokem976aes.rs  frodokem976shake.rs  lib.rs
pqcrypto-hqc/: Cargo.toml  README.md  build.rs
pqcrypto-hqc/src/: ffi.rs  hqc128.rs  hqc1281cca2.rs  hqc192.rs  hqc1921cca2.rs  hqc1922cca2.rs  hqc256.rs  hqc2561cca2.rs  hqc2562cca2.rs  hqc2563cca2.rs  hqcrmrs128.rs  hqcrmrs192.rs  hqcrmrs256.rs  lib.rs
pqcrypto-internals/: Cargo.toml  build.rs  cbindgen.toml
pqcrypto-internals/cfiles/: aes.c  fips202.c  nistseedexpander.c  sha2.c  sp800-185.c
pqcrypto-internals/cfiles/keccak2x/: feat.S
pqcrypto-internals/include/: aes.h  common.h  fips202.h  nistseedexpander.h  randombytes.h  sha2.h  sp800-185.h
pqcrypto-internals/src/: fips202.rs  lib.rs  macros.rs  randombytes.rs  sha2.rs
pqcrypto-kyber/: Cargo.toml  README.md  build.rs
pqcrypto-kyber/src/: ffi.rs  kyber1024.rs  kyber102490s.rs  kyber512.rs  kyber51290s.rs  kyber768.rs  kyber76890s.rs  lib.rs
pqcrypto-ledacryptkem/: Cargo.toml  README.md  build.rs
pqcrypto-ledacryptkem/src/: ffi.rs  ledakemlt12.rs  ledakemlt32.rs  ledakemlt52.rs  lib.rs
pqcrypto-mldsa/: Cargo.toml  README.md  build.rs
pqcrypto-mldsa/src/: ffi.rs  lib.rs  mldsa44.rs  mldsa65.rs  mldsa87.rs
pqcrypto-mlkem/: Cargo.toml  README.md  build.rs
pqcrypto-mlkem/src/: ffi.rs  lib.rs  mlkem1024.rs  mlkem512.rs  mlkem768.rs
pqcrypto-mqdss/: Cargo.toml  README.md  build.rs  include
pqcrypto-mqdss/src/: ffi.rs  lib.rs  mqdss48.rs  mqdss64.rs
pqcrypto-newhope/: Cargo.toml  README.md  build.rs
pqcrypto-newhope/src/: ffi.rs  lib.rs  newhope1024cca.rs  newhope1024cpa.rs  newhope512cca.rs  newhope512cpa.rs
pqcrypto-ntru/: Cargo.toml  README.md  build.rs
pqcrypto-ntru/src/: ffi.rs  lib.rs  ntruhps2048509.rs  ntruhps2048677.rs  ntruhps40961229.rs  ntruhps4096821.rs  ntruhrss1373.rs  ntruhrss701.rs
pqcrypto-ntruprime/: Cargo.toml  README.md  build.rs  wasi-sysroot
pqcrypto-ntruprime/src/: ffi.rs  lib.rs  ntrulpr1013.rs  ntrulpr1277.rs  ntrulpr653.rs  ntrulpr761.rs  ntrulpr857.rs  ntrulpr953.rs  sntrup1013.rs  sntrup1277.rs  sntrup653.rs  sntrup761.rs  sntrup857.rs  sntrup953.rs
pqcrypto-qtesla/: Cargo.toml  README.md  build.rs
pqcrypto-qtesla/src/: ffi.rs  lib.rs  qteslapi.rs  qteslapiii.rs
pqcrypto-rainbow/: Cargo.toml  README.md  build.rs
pqcrypto-rainbow/src/: ffi.rs  lib.rs  rainbowaclassic.rs  rainbowacyclic.rs  rainbowacycliccompressed.rs  rainbowcclassic.rs  rainbowccyclic.rs  rainbowccycliccompressed.rs  rainbowiaclassic.rs  rainbowiacyclic.rs  rainbowiacycliccompressed.rs  rainbowicircumzenithal.rs  rainbowiclassic.rs  rainbowicompressed.rs  rainbowiiicclassic.rs  rainbowiiiccyclic.rs  rainbowiiiccycliccompressed.rs  rainbowiiicircumzenithal.rs  rainbowiiiclassic.rs  rainbowiiicompressed.rs  rainbowvcclassic.rs  rainbowvccyclic.rs  rainbowvccycliccompressed.rs  rainbowvcircumzenithal.rs  rainbowvclassic.rs  rainbowvcompressed.rs
pqcrypto-saber/: Cargo.toml  README.md  build.rs
pqcrypto-saber/src/: ffi.rs  firesaber.rs  lib.rs  lightsaber.rs  saber.rs
pqcrypto-sphincsplus/: Cargo.toml  README.md  build.rs
pqcrypto-sphincsplus/src/: ffi.rs  lib.rs  sphincsharaka128frobust.rs  sphincsharaka128fsimple.rs  sphincsharaka128srobust.rs  sphincsharaka128ssimple.rs  sphincsharaka192frobust.rs  sphincsharaka192fsimple.rs  sphincsharaka192srobust.rs  sphincsharaka192ssimple.rs  sphincsharaka256frobust.rs  sphincsharaka256fsimple.rs  sphincsharaka256srobust.rs  sphincsharaka256ssimple.rs  sphincssha2128frobust.rs  sphincssha2128fsimple.rs  sphincssha2128srobust.rs  sphincssha2128ssimple.rs  sphincssha2192frobust.rs  sphincssha2192fsimple.rs  sphincssha2192srobust.rs  sphincssha2192ssimple.rs  sphincssha2256frobust.rs  sphincssha2256fsimple.rs  sphincssha2256srobust.rs  sphincssha2256ssimple.rs  sphincsshake128frobust.rs  sphincsshake128fsimple.rs  sphincsshake128srobust.rs  sphincsshake128ssimple.rs  sphincsshake192frobust.rs  sphincsshake192fsimple.rs  sphincsshake192srobust.rs  sphincsshake192ssimple.rs  sphincsshake256frobust.rs  sphincsshake256fsimple.rs  sphincsshake256srobust.rs  sphincsshake256ssimple.rs
pqcrypto-template/: workspace-Cargo.toml.j2
pqcrypto-template/pqcrypto/: Cargo.toml.j2  README.md.j2
pqcrypto-template/pqcrypto/examples/: keygen.rs  signer.rs  verifier.rs
pqcrypto-template/pqcrypto/src/: lib.rs.j2
pqcrypto-template/scheme/: Cargo.toml.j2  README.md.j2  build.rs.j2
pqcrypto-template/scheme/src/: ffi.rs.j2  lib.rs.j2  scheme.rs.j2
pqcrypto-threebears/: Cargo.toml  README.md  build.rs
pqcrypto-threebears/src/: babybear.rs  babybearephem.rs  ffi.rs  lib.rs  mamabear.rs  mamabearephem.rs  papabear.rs  papabearephem.rs
pqcrypto-traits/: Cargo.toml
pqcrypto-traits/src/: kem.rs  lib.rs  sign.rs
pqcrypto/examples/: keygen.rs  signer.rs  verifier.rs
pqcrypto/src/: lib.rs
