[package]
name = "pqcrypto-internals"
version = "0.2.2"
edition = "2018"
description = "bindings to common cryptography"
license = "MIT OR Apache-2.0"

links = "pqcrypto_internals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
getrandom = "0.2"
libc = "0.2"
