[package]
name = "pqcrypto-internals"
version = "0.2.11"
edition = "2021"
description = "bindings to common cryptography"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustpq/pqcrypto"

links = "pqcrypto_internals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
dunce = "1.0"

[dependencies]
getrandom = "0.3"
libc = "0.2"
