[package]
name = "pqcrypto-kyber"
description = "Post-Quantum key-encapsulation mechanism Kyber768"
version = "0.1.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"

[dependencies]
pqcrypto-traits = {path = "../pqcrypto-traits", version = "0.1.0" }
libc = "0.2.0"

[build-dependencies]
cc = { version = "1.0" }
glob = "0.3.0"
