[package]
name = "pqcrypto-sphincsplus"
description = "Post-Quantum Signature Scheme sphincsplus"
readme = "README.md"
version = "0.3.2"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqcrypto/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography"]

[dependencies]
pqcrypto-traits = {path = "../pqcrypto-traits", version = "0.2.0"}
pqcrypto-internals = {path = "../pqcrypto-internals", version = "0.1.0"}
libc = "0.2.0"

[dev-dependencies]
rand = "0.6.0"

[build-dependencies]
cc = { version = "1.0" }
glob = "0.3.0"

[badges]
travis-ci = { repository = "rustpq/pqcrypto", branch = "master" }
maintenance = { status = "actively-maintained" }