[package]
name = "pqcrypto-sphincsplus"
description = "Post-Quantum Signature Scheme sphincsplus"
readme = "README.md"
version = "0.6.4"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqcrypto/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography", "no-std"]

[dependencies]
pqcrypto-internals = { path = "../pqcrypto-internals", version = "0.2" }
pqcrypto-traits = { path = "../pqcrypto-traits", version = "0.3.4", default-features = false }
libc = "0.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", features = ["const-generics"], optional = true }

[features]
default = ["avx2", "aes", "std"]
avx2 = ["std"]
aes = ["std"]
std = ["pqcrypto-traits/std"]
serialization = ["serde", "serde-big-array"]

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"

[badges]
travis-ci = { repository = "rustpq/pqcrypto", branch = "master" }
maintenance = { status = "actively-developed" }

