[package]
name = "pqcrypto-traits"
version = "0.3.3"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"
description = "Shared traits for post-quantum cryptographic primitives"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqclean/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography", "no-std"]

[dependencies]

[features]
default = ["std"]
std = []
