[package]
name = "pqcrypto"
description = "Post-Quantum cryptographic primitives"
readme = "README.md"
version = "0.14.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqcrypto/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography"]

[dependencies]
pqcrypto-traits = { path = "../pqcrypto-traits", version = "0.3.2", default-features = false }
pqcrypto-kyber = { path = "../pqcrypto-kyber", version = "0.7.1", optional = true, default-features = false }
pqcrypto-frodo = { path = "../pqcrypto-frodo", version = "0.4.7", optional = true, default-features = false }
pqcrypto-ntru = { path = "../pqcrypto-ntru", version = "0.5.4", optional = true, default-features = false }
pqcrypto-ntruprime = { path = "../pqcrypto-ntruprime", version = "0.1.2", optional = true, default-features = false }
pqcrypto-saber = { path = "../pqcrypto-saber", version = "0.1.7", optional = true, default-features = false }
pqcrypto-classicmceliece = { path = "../pqcrypto-classicmceliece", version = "0.1.3", optional = true, default-features = false }
pqcrypto-hqc = { path = "../pqcrypto-hqc", version = "0.1.1", optional = true, default-features = false }
pqcrypto-dilithium = { path = "../pqcrypto-dilithium", version = "0.4.1", optional = true, default-features = false }
pqcrypto-falcon = { path = "../pqcrypto-falcon", version = "0.2.7", optional = true, default-features = false }
pqcrypto-rainbow = { path = "../pqcrypto-rainbow", version = "0.2.1", optional = true, default-features = false }
pqcrypto-sphincsplus = { path = "../pqcrypto-sphincsplus", version = "0.6.0", optional = true, default-features = false }

[features]
default = ["std","pqcrypto-kyber","pqcrypto-frodo","pqcrypto-ntru","pqcrypto-ntruprime","pqcrypto-saber","pqcrypto-classicmceliece","pqcrypto-hqc","pqcrypto-dilithium","pqcrypto-falcon","pqcrypto-rainbow","pqcrypto-sphincsplus",]
cryptographically-insecure = []
std = ["pqcrypto-traits/std","pqcrypto-kyber/std","pqcrypto-frodo/std","pqcrypto-ntru/std","pqcrypto-ntruprime/std","pqcrypto-saber/std","pqcrypto-classicmceliece/std","pqcrypto-hqc/std","pqcrypto-dilithium/std","pqcrypto-falcon/std","pqcrypto-rainbow/std","pqcrypto-sphincsplus/std",]
serialization = ["pqcrypto-kyber/serialization","pqcrypto-frodo/serialization","pqcrypto-ntru/serialization","pqcrypto-ntruprime/serialization","pqcrypto-saber/serialization","pqcrypto-classicmceliece/serialization","pqcrypto-hqc/serialization","pqcrypto-dilithium/serialization","pqcrypto-falcon/serialization","pqcrypto-rainbow/serialization","pqcrypto-sphincsplus/serialization",]

[badges]
travis-ci = { repository = "rustpq/pqcrypto", branch = "master" }
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
