[package]
name = "pqcrypto"
description = "Post-Quantum cryptographic primitives"
readme = "README.md"
version = "0.16.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqcrypto/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography"]

[dependencies]
pqcrypto-traits = { path = "../pqcrypto-traits", version = "0.3.4" }
pqcrypto-kyber = { path = "../pqcrypto-kyber", version = "0.7.6", optional = true }
pqcrypto-classicmceliece = { path = "../pqcrypto-classicmceliece", version = "0.1.7", optional = true }
pqcrypto-hqc = { path = "../pqcrypto-hqc", version = "0.1.6", optional = true }
pqcrypto-dilithium = { path = "../pqcrypto-dilithium", version = "0.4.5", optional = true }
pqcrypto-falcon = { path = "../pqcrypto-falcon", version = "0.2.10", optional = true }
pqcrypto-sphincsplus = { path = "../pqcrypto-sphincsplus", version = "0.6.4", optional = true }

[features]
default = ["pqcrypto-kyber","pqcrypto-classicmceliece","pqcrypto-hqc","pqcrypto-dilithium","pqcrypto-falcon","pqcrypto-sphincsplus",]
cryptographically-insecure = []
serialization = ["pqcrypto-kyber/serialization","pqcrypto-classicmceliece/serialization","pqcrypto-hqc/serialization","pqcrypto-dilithium/serialization","pqcrypto-falcon/serialization","pqcrypto-sphincsplus/serialization",]

[badges]
travis-ci = { repository = "rustpq/pqcrypto", branch = "master" }
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true